# homeworks

./: pyproject.toml  setup.cfg
basics/: basics_01.py  basics_02.py
homework_1/: characters.csv  homework_1.py  people.json
homework_10/: cars.json  homework_10.py  homework_10_2.py
homework_11/: homework_11.py
homework_34/: Austria.json  Belarus.json  Belgium.json  Bulgaria.json  Denmark.json  Germany.json  Norway.json  Poland.json  Spain.json  Sweden.json  api.py
homework_8/: homework_8.py
homework_9/: class_work.py  homework_9.py
loops/: loops_01.py  loops_02.py  loops_03.py  loops_04.py  loops_05.py  loops_06.py  loops_07.py  loops_08.py  loops_09.py  loops_10.py  loops_11.py  loops_12.py  loops_13.py  loops_14.py  loops_15.py
strings/: strings_01.py  strings_02.py  strings_03.py  strings_04.py  strings_05.py
